OPC7/force-app/main/default/objects/Prix__c/Prix__c.object-meta.xml
<CustomObject>
    <label>Prix</label>
    <nameField>
        <displayFormat>Prix-{0000}</displayFormat>
        <label>Prix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>