OPC7/force-app/main/default/objects/Prix__c/fields/Delai_De_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Delai_De_Livraison__c</fullName>
    <label>Delai De Livraison</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>