OPC7/force-app/main/default/objects/Prix__c/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <label>Tarif</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>