OPC7/force-app/main/default/objects/Prix__c/validationRules/DelaiDeLivraisonMax.validationRule-meta.xml
<ValidationRule>
    <fullName>DelaiDeLivraisonMax</fullName>
    <active>true</active>
    <errorConditionFormula>Delai_De_Livraison__c &gt; 15</errorConditionFormula>
    <errorDisplayField>Delai_De_Livraison__c</errorDisplayField>
    <errorMessage>Le Délai de livraison ne peut pas dépasser 15 jours !</errorMessage>
</ValidationRule>