OPC7/force-app/main/default/objects/Prix__c/validationRules/TarifPositif.validationRule-meta.xml
<ValidationRule>
    <fullName>TarifPositif</fullName>
    <active>true</active>
    <description>Règle de validation pour vérifier qu&apos;il n&apos;y a pas de valeur négatives dans la tarification</description>
    <errorConditionFormula>Tarif__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Tarif__c</errorDisplayField>
    <errorMessage>Le tarif doit être positif !</errorMessage>
</ValidationRule>